# gitcontrol

./: LICENSE  README.md  gitcontrol.cabal
System/: GitControl.hs
System/GitControl/: Class.hs  Dummy.hs  SQLite.hs  Shell.hs  Types.hs
src/: GitControl.hs
