Name:                gitcontrol
Version:             0.1.0
Synopsis:            synopsis
Description:         Git control
License:             GPL3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            git control test
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/gitcontrol
Cabal-Version:       >=1.8
data-files:          README.md

Executable           gitcontrol
  Main-Is:           GitControl.hs
  ghc-options:       -Wall -fno-warn-missing-signatures
  Hs-Source-Dirs:    src
  Build-depends:     base >= 4 && < 5
                   , bytestring

--Test-Suite test-gitcontrol
--  type:              exitcode-stdio-1.0
--  hs-source-dirs:    tests
--  Main-is:           Tests.hs
--  Build-Depends:     base >= 3 && < 5
--                   , mtl
--                   , QuickCheck >= 2
--                   , HUnit
--                   , test-framework
--                   , test-framework-quickcheck2
--                   , test-framework-hunit
--  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures

source-repository head
  type: git
  location: git://github.com/vincenthz/gitcontrol
