Name:                gitcontrol
Version:             0.1.0
Synopsis:            synopsis
Description:         Git control
License:             GPL-3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>, Nicolas Di Prima <nicolas@di-prima.fr>
Author:              Vincent Hanquez <vincent@snarc.org>, Nicolas Di Prima <nicolas@di-prima.fr>
Maintainer:          vincent@snarc.org, nicolas@di-prima.fr
Category:            git control test
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/gitcontrol
Cabal-Version:       >=1.8
data-files:          README.md

Executable           gitcontrol-shell
  Main-Is:           GitControl.hs
  ghc-options:       -Wall -fno-warn-missing-signatures
  Hs-Source-Dirs:    src
  Build-depends:     base >= 4 && < 5
                   , unix
                   , bytestring
                   , gitcontrol
                   , containers

library
  exposed-modules:   System.GitControl
  other-modules:     System.GitControl.Shell
                     System.GitControl.Types
                     System.GitControl.Class
  ghc-options:       -Wall -fno-warn-missing-signatures
  build-depends:     base >=4 && < 5
                   , unix
                   , bytestring

  -- Base language which the package is written in.
--Test-Suite test-gitcontrol
--  type:              exitcode-stdio-1.0
--  hs-source-dirs:    tests
--  Main-is:           Tests.hs
--  Build-Depends:     base >= 3 && < 5
--                   , mtl
--                   , QuickCheck >= 2
--                   , HUnit
--                   , test-framework
--                   , test-framework-quickcheck2
--                   , test-framework-hunit
--  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures

source-repository head
  type: git
  location: git://github.com/vincenthz/gitcontrol
